feat: Introduce WebFlux security and route tests, refine CORS configuration, and permit public endpoints.